--- a/05-easy_bank_landing_page/index.html
+++ b/05-easy_bank_landing_page/index.html
@@ -21,7 +21,7 @@
 <body>
   <header class="header-section">
     <div class="header container">
-      <img class="footer__logo-wrapper" src="images/logo.svg" alt="logo">
+      <img class="header__logo-wrapper" src="images/logo.svg" alt="logo">
 
       <nav class="header__nav">
         <ul class="header__nav-list">
