--- a/15-designo_multi_page_website/pages/about.html
+++ b/15-designo_multi_page_website/pages/about.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/main.min.css">
 
-    <title>Frontend Mentor | Designo Agency Website Challenge</title>
+    <title>Designo | About Us</title>
 </head>
 <body>
 
 <header class="header-section">
-    <div class="header container flex flex-justify-space-between flex-align-center">
+    <div class="header container flex flex--justify-space-between flex--align-center">
         <a href="../index.html" class="header__logo-wrapper">
             <img src="/images/shared/desktop/logo-dark.png" class="header__logo" alt="Designo logo">
         </a>
         <nav class="header__nav">
             <ul class="header__nav-list flex">
-                <li><a href="about.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
-                <li><a href="locations.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
-                <li><a href="contact.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
+                <li><a href="about.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Our
+                    Content</a></li>
+                <li><a href="locations.html"
+                       class="header__nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
+                <li><a href="contact.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Contact</a>
+                </li>
             </ul>
         </nav>
-        <div class="header__mobile-nav">
-            <button class="header__nav-open-btn grid grid-place-center"><img src="/images/shared/mobile/icon-hamburger.svg" alt=""></button>
-            <button class="header__nav-close-btn grid grid-place-center"><img src="/images/shared/mobile/icon-close.svg" alt=""></button>
-        </div>
+        <button class="header__mobile-nav-toggle"></button>
     </div>
 </header>
 
@@ -53,7 +53,7 @@
 </section>
 
 <section class="talent-section section-padding">
-    <div class="container about about--talent background-very-light-peach grid">
+    <div class="about about--talent container background-very-light-peach grid">
         <div class="about__image-wrapper about__image-wrapper--talent"></div>
         <div class="about__text-content hero-flow">
             <h1 class="about__heading secondary-heading text-color-peach">
@@ -75,11 +75,12 @@
 
 <section class="locations-section section-padding">
     <div class="container locations grid">
-        <div class="locations__item flex flex-column flex-align-center">
+        <div class="locations__item flex flex--column flex--align-center">
             <div class="locations__image-wrapper">
-                <img src="/images/shared/desktop/illustration-canada.svg" class="locations__image" alt="Canada illustration">
+                <img src="/images/shared/desktop/illustration-canada.svg" class="locations__image"
+                     alt="Canada illustration">
             </div>
-            <div class="locations__text-content grid grid-place-center text-align-center">
+            <div class="locations__text-content grid grid--items-center text-align-center">
                 <h3 class="locations__heading tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
                     Canada
                 </h3>
@@ -89,11 +90,12 @@
             </div>
         </div>
 
-        <div class="locations__item flex flex-column flex-align-center">
+        <div class="locations__item flex flex--column flex--align-center">
             <div class="locations__image-wrapper">
-                <img src="/images/shared/desktop/illustration-australia.svg" class="locations__image" alt="Australia illustration">
+                <img src="/images/shared/desktop/illustration-australia.svg" class="locations__image"
+                     alt="Australia illustration">
             </div>
-            <div class="locations__text-content grid grid-place-center text-align-center">
+            <div class="locations__text-content grid grid--items-center text-align-center">
                 <h3 class="locations__heading tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
                     Australia
                 </h3>
@@ -103,11 +105,12 @@
             </div>
         </div>
 
-        <div class="locations__item flex flex-column flex-align-center">
+        <div class="locations__item flex flex--column flex--align-center">
             <div class="locations__image-wrapper">
-                <img src="/images/shared/desktop/illustration-united-kingdom.svg" class="locations__image" alt="United Kingdom illustration">
+                <img src="/images/shared/desktop/illustration-united-kingdom.svg" class="locations__image"
+                     alt="United Kingdom illustration">
             </div>
-            <div class="locations__heading locations__text-content grid grid-place-center text-align-center">
+            <div class="locations__heading locations__text-content grid grid--items-center text-align-center">
                 <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
                     United Kingdom
                 </h3>
@@ -127,10 +130,13 @@
                 The real deal
             </h1>
             <p class="about__text font-size-100 text-color-dark-grey">
-                As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own. Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to every opportunity. We make design and technology more accessible and give you tools to measure success.
+                As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own.
+                Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to
+                every opportunity. We make design and technology more accessible and give you tools to measure success.
             </p>
             <p class="about__text font-size-100 text-color-dark-grey">
-                We are visual storytellers in appealing and captivating ways. By combining business and marketing strategies, we inspire audiences to take action and drive real results.
+                We are visual storytellers in appealing and captivating ways. By combining business and marketing
+                strategies, we inspire audiences to take action and drive real results.
             </p>
         </div>
     </div>
@@ -149,7 +155,8 @@
                 </p>
             </div>
             <div class="footer-contact__button-wrapper grid">
-                <a href="contact.html" class="footer-contact__btn btn btn--light text-color-dark-grey text-decoration-none uppercase">
+                <a href="contact.html"
+                   class="footer-contact__btn btn btn--light text-color-dark-grey text-decoration-none uppercase">
                     Get in Touch
                 </a>
             </div>
@@ -157,18 +164,19 @@
     </section>
 
     <div class="container footer">
-        <div class="footer__logo-wrapper">
-            <a class="footer__logo-link flex flex-align-center flex-justify-center" href="../index.html">
-                <img src="/images/shared/desktop/logo-light.png" class="footer__logo" alt="Logo light">
-            </a>
-        </div>
+        <a class="footer__logo-wrapper flex flex--align-center flex--justify-center" href="../index.html">
+            <img src="/images/shared/desktop/logo-light.png" class="footer__logo" alt="Logo light">
+        </a>
         <nav class="footer__nav">
-            <ul class="footer__nav-list list-style-none flex flex-column flex-gap">
-                <li><a href="about.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
+            <ul class="footer__nav-list list-style-none flex flex--column flex--gap">
+                <li><a href="about.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
                     company</a></li>
-                <li><a href="locations.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                <li><a href="locations.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
                 </li>
-                <li><a href="contact.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                <li><a href="contact.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -184,18 +192,28 @@
             <a class="footer__contact-link footer-text-color text-decoration-none" href="contact@designo.co">M :
                 contact@designo.co</a>
         </div>
-        <div class="footer__social-logos-wrapper flex flex-gap">
-            <a class="footer__social-logo-link" href="https://www.facebook.com/"><ion-icon name="logo-facebook" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://www.youtube.com/"><ion-icon name="logo-youtube" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://twitter.com/"><ion-icon name="logo-twitter" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://in.pinterest.com/"><ion-icon name="logo-pinterest" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://www.instagram.com/"><ion-icon name="logo-instagram" class="footer__social-logo"></ion-icon></a>
+        <div class="footer__social-logos-wrapper flex flex--gap">
+            <a class="footer__social-logo-link" href="https://www.facebook.com/">
+                <ion-icon name="logo-facebook" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://www.youtube.com/">
+                <ion-icon name="logo-youtube" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://twitter.com/">
+                <ion-icon name="logo-twitter" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://in.pinterest.com/">
+                <ion-icon name="logo-pinterest" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://www.instagram.com/">
+                <ion-icon name="logo-instagram" class="footer__social-logo"></ion-icon>
+            </a>
         </div>
     </div>
 </footer>
 
 <div class="overlay hidden"></div>
-<script src="../javascript/script.js"></script>
+<script src="../js/script.js"></script>
 
 </body>
 </html>
