--- a/15-designo_multi_page_website/pages/graphic-design.html
+++ b/15-designo_multi_page_website/pages/graphic-design.html
@@ -1,181 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/main.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/main.min.css">
 
-  <title>Frontend Mentor | Designo Agency Website Challenge</title>
+    <title>Designo | Graphic Design</title>
 </head>
 <body>
 
 <header class="header-section">
-  <div class="header container flex flex-justify-space-between flex-align-center">
-    <a href="../index.html" class="header__logo-wrapper">
-      <img src="/images/shared/desktop/logo-dark.png" class="header__logo" alt="Designo logo">
-    </a>
-    <nav class="header__nav">
-      <ul class="header__nav-list flex">
-        <li><a href="about.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
-        <li><a href="locations.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
-        <li><a href="contact.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
-      </ul>
-    </nav>
-    <div class="header__mobile-nav">
-      <button class="header__nav-open-btn grid grid-place-center"><img src="/images/shared/mobile/icon-hamburger.svg" alt=""></button>
-      <button class="header__nav-close-btn grid grid-place-center"><img src="/images/shared/mobile/icon-close.svg" alt=""></button>
+    <div class="header container flex flex--justify-space-between flex--align-center">
+        <a href="../index.html" class="header__logo-wrapper">
+            <img src="/images/shared/desktop/logo-dark.png" class="header__logo" alt="Designo logo">
+        </a>
+        <nav class="header__nav">
+            <ul class="header__nav-list flex">
+                <li><a href="about.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Our
+                    Content</a></li>
+                <li><a href="locations.html"
+                       class="header__nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
+                <li><a href="contact.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <button class="header__mobile-nav-toggle"></button>
     </div>
-  </div>
 </header>
 
 <main>
-  <section class="hero-section">
-    <div class="container hero-design grid grid-place-center background-peach text-align-center">
-      <div class="hero-design__text-content flow">
-        <h1 class="primary-heading text-color-white">Graphic design</h1>
-        <p class="font-size-100 text-color-white"> We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="cards-section section-padding">
-    <div class="container grid grid--3-columns">
-      <div class="card background-very-light-peach">
-        <div class="card__image-wrapper">
-          <img src="/images/graphic-design/desktop/image-change.jpg" class="card__image" alt="Timbrown book">
+    <section class="hero-section">
+        <div class="container hero-design grid grid--items-center background-peach text-align-center">
+            <div class="hero-design__text-content flow">
+                <h1 class="primary-heading text-color-white">Graphic design</h1>
+                <p class="font-size-100 text-color-white"> We deliver eye-catching branding materials that are tailored
+                    to meet your business objectives.</p>
+            </div>
         </div>
-        <div class="card__text-content text-align-center flow">
-          <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
-            Tim Brown
-          </h3>
-          <p class="card__text text-color-dark-grey font-size-100">
-            A book cover designed for Tim Brown’s new release, ‘Change’
-          </p>
-        </div>
-      </div>
+    </section>
 
-      <div class="card background-very-light-peach">
-        <div class="card__image-wrapper">
-          <img src="/images/graphic-design/desktop/image-boxed-water.jpg" class="card__image" alt="Boxed Water">
-        </div>
-        <div class="card__text-content text-align-center flow">
-          <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
-            Boxed water
-          </h3>
-          <p class="card__text text-color-dark-grey font-size-100">
-            A simple packaging concept made for Boxed Water
-          </p>
-        </div>
-      </div>
+    <section class="cards-section section-padding">
+        <div class="container grid grid--3-columns">
+            <div class="card background-very-light-peach">
+                <a class="card__link" href="#">
+                    <div class="card__image-wrapper">
+                        <img src="/images/graphic-design/desktop/image-change.jpg" class="card__image"
+                             alt="Timbrown book">
+                    </div>
+                    <div class="card__text-content text-align-center flow">
+                        <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                            Tim Brown
+                        </h3>
+                        <p class="card__text text-color-dark-grey font-size-100">
+                            A book cover designed for Tim Brown’s new release, ‘Change’
+                        </p>
+                    </div>
+                </a>
+            </div>
 
-      <div class="card background-very-light-peach">
-        <div class="card__image-wrapper">
-          <img src="/images/graphic-design/desktop/image-science.jpg" class="card__image" alt="Science image">
+            <div class="card background-very-light-peach">
+                <a class="card__link" href="#">
+                    <div class="card__image-wrapper">
+                        <img src="/images/graphic-design/desktop/image-boxed-water.jpg" class="card__image"
+                             alt="Boxed Water">
+                    </div>
+                    <div class="card__text-content text-align-center flow">
+                        <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                            Boxed water
+                        </h3>
+                        <p class="card__text text-color-dark-grey font-size-100">
+                            A simple packaging concept made for Boxed Water
+                        </p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card background-very-light-peach">
+                <a class="card__link" href="#">
+                    <div class="card__image-wrapper">
+                        <img src="/images/graphic-design/desktop/image-science.jpg" class="card__image"
+                             alt="Science image">
+                    </div>
+                    <div class="card__text-content text-align-center flow">
+                        <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                            Science!
+                        </h3>
+                        <p class="card__text text-color-dark-grey font-size-100">
+                            A poster made in collaboration with the Federal Art Project
+                        </p>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card__text-content text-align-center flow">
-          <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
-            Science!
-          </h3>
-          <p class="card__text text-color-dark-grey font-size-100">
-            A poster made in collaboration with the Federal Art Project
-          </p>
+    </section>
+
+    <section class="services-section section-padding">
+        <div class="container grid grid--2-columns">
+            <a href="web-design.html" class="service service--web grid grid--content-center grid-gap text-decoration-none">
+                <h2 class="service__heading secondary-heading text-color-white uppercase letter-spacing-1">
+                    Web Design
+                </h2>
+                <p class="service__text font-size-100 text-color-white uppercase letter-spacing-2">
+                    View Projects <span class="service__link-symbol">&#62;</span>
+                </p>
+            </a>
+
+            <a href="app-design.html" class="service service--app grid grid--content-center grid-gap text-decoration-none">
+                <h2 class="service__heading secondary-heading text-color-white uppercase letter-spacing-1">
+                    App Design
+                </h2>
+                <p class="service__text font-size-100 text-color-white uppercase letter-spacing-2">
+                    View Projects <span class="service__link-symbol">&#62;</span>
+                </p>
+            </a>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="services-section section-padding">
-    <div class="container grid grid--2-columns">
-      <div class="service service--web-design flex flex-justify-center flex-align-center flex-column flex-gap">
-        <h2 class="service__heading secondary-heading text-color-white uppercase letter-spacing-1">
-          Web Design
-        </h2>
-        <a class="service__link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
-          View Projects <span class="service__link-symbol">&#62;</span>
-        </a>
-      </div>
-
-      <div class="service service--app-design flex flex-justify-center flex-align-center flex-column flex-gap">
-        <h2 class="service__heading secondary-heading text-color-white uppercase letter-spacing-1">
-          App Design
-        </h2>
-        <a class="service__link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
-          View Projects <span class="service__link-symbol">&#62;</span>
-        </a>
-      </div>
-
-    </div>
-  </section>
+    </section>
 </main>
 
 <footer class="footer-section section-padding background-black">
-  <section class="footer-contact-section">
-    <div class="footer-contact container background-peach grid grid--2-columns">
-      <div class="footer-contact__text-content flow">
-        <h2 class="footer-contact__heading secondary-heading text-color-white">
-          Let’s talk about your project
-        </h2>
-        <p class="footer-contact__text font-size-100 text-color-white">
-          Ready to take it to the next level? Contact us today and find out how our expertise can help your
-          business grow.
-        </p>
-      </div>
-      <div class="footer-contact__button-wrapper grid">
-        <a href="contact.html" class="footer-contact__btn btn btn--light text-color-dark-grey text-decoration-none uppercase">
-          Get in Touch
-        </a>
-      </div>
-    </div>
-  </section>
+    <section class="footer-contact-section">
+        <div class="footer-contact container background-peach grid grid--2-columns">
+            <div class="footer-contact__text-content flow">
+                <h2 class="footer-contact__heading secondary-heading text-color-white">
+                    Let’s talk about your project
+                </h2>
+                <p class="footer-contact__text font-size-100 text-color-white">
+                    Ready to take it to the next level? Contact us today and find out how our expertise can help your
+                    business grow.
+                </p>
+            </div>
+            <div class="footer-contact__button-wrapper grid">
+                <a href="contact.html"
+                   class="footer-contact__btn btn btn--light text-color-dark-grey text-decoration-none uppercase">
+                    Get in Touch
+                </a>
+            </div>
+        </div>
+    </section>
 
-  <div class="container footer">
-    <div class="footer__logo-wrapper">
-      <a class="footer__logo-link flex flex-align-center flex-justify-center" href="../index.html">
-        <img src="/images/shared/desktop/logo-light.png" class="footer__logo" alt="Logo light">
-      </a>
+    <div class="container footer">
+        <a class="footer__logo-wrapper flex flex--align-center flex--justify-center" href="../index.html">
+            <img src="/images/shared/desktop/logo-light.png" class="footer__logo" alt="Logo light">
+        </a>
+        <nav class="footer__nav">
+            <ul class="footer__nav-list list-style-none flex flex--column flex--gap">
+                <li><a href="about.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
+                    company</a></li>
+                <li><a href="locations.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                </li>
+                <li><a href="contact.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="footer__address-wrapper">
+            <p class="footer__address footer-text-color text-bold">Designo Central Office</p>
+            <p class="footer__address footer-text-color">3886 Wellington Street</p>
+            <p class="footer__address footer-text-color">Toronto, Ontario M9C 3J5</p>
+        </div>
+        <div class="footer__contact-box">
+            <p class="footer__contact-heading footer-text-color text-bold">Contact Us (Central Office)</p>
+            <a class="footer__contact-link footer-text-color text-decoration-none" href="tel: +1 253-863-8967">P : +1
+                253-863-8967</a>
+            <a class="footer__contact-link footer-text-color text-decoration-none" href="contact@designo.co">M :
+                contact@designo.co</a>
+        </div>
+        <div class="footer__social-logos-wrapper flex flex--gap">
+            <a class="footer__social-logo-link" href="https://www.facebook.com/">
+                <ion-icon name="logo-facebook" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://www.youtube.com/">
+                <ion-icon name="logo-youtube" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://twitter.com/">
+                <ion-icon name="logo-twitter" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://in.pinterest.com/">
+                <ion-icon name="logo-pinterest" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://www.instagram.com/">
+                <ion-icon name="logo-instagram" class="footer__social-logo"></ion-icon>
+            </a>
+        </div>
     </div>
-    <nav class="footer__nav">
-      <ul class="footer__nav-list list-style-none flex flex-column flex-gap">
-        <li><a href="about.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
-          company</a></li>
-        <li><a href="locations.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
-        </li>
-        <li><a href="contact.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
-        </li>
-      </ul>
-    </nav>
-    <div class="footer__address-wrapper">
-      <p class="footer__address footer-text-color text-bold">Designo Central Office</p>
-      <p class="footer__address footer-text-color">3886 Wellington Street</p>
-      <p class="footer__address footer-text-color">Toronto, Ontario M9C 3J5</p>
-    </div>
-    <div class="footer__contact-box">
-      <p class="footer__contact-heading footer-text-color text-bold">Contact Us (Central Office)</p>
-      <a class="footer__contact-link footer-text-color text-decoration-none" href="tel: +1 253-863-8967">P : +1
-        253-863-8967</a>
-      <a class="footer__contact-link footer-text-color text-decoration-none" href="contact@designo.co">M :
-        contact@designo.co</a>
-    </div>
-    <div class="footer__social-logos-wrapper flex flex-gap">
-      <a class="footer__social-logo-link" href="https://www.facebook.com/"><ion-icon name="logo-facebook" class="footer__social-logo"></ion-icon></a>
-      <a class="footer__social-logo-link" href="https://www.youtube.com/"><ion-icon name="logo-youtube" class="footer__social-logo"></ion-icon></a>
-      <a class="footer__social-logo-link" href="https://twitter.com/"><ion-icon name="logo-twitter" class="footer__social-logo"></ion-icon></a>
-      <a class="footer__social-logo-link" href="https://in.pinterest.com/"><ion-icon name="logo-pinterest" class="footer__social-logo"></ion-icon></a>
-      <a class="footer__social-logo-link" href="https://www.instagram.com/"><ion-icon name="logo-instagram" class="footer__social-logo"></ion-icon></a>
-    </div>
-  </div>
 </footer>
 
 
 <div class="overlay hidden"></div>
-<script src="../javascript/script.js"></script>
+<script src="../js/script.js"></script>
 
 
 </body>
