--- a/15-designo_multi_page_website/pages/locations.html
+++ b/15-designo_multi_page_website/pages/locations.html
@@ -4,40 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/main.min.css">
 
-    <title>Frontend Mentor | Designo Agency Website Challenge</title>
+    <title>Designo | Locations</title>
 </head>
 <body>
 
 <header class="header-section">
-    <div class="header container flex flex-justify-space-between flex-align-center">
+    <div class="header container flex flex--justify-space-between flex--align-center">
         <a href="../index.html" class="header__logo-wrapper">
             <img src="/images/shared/desktop/logo-dark.png" class="header__logo" alt="Designo logo">
         </a>
         <nav class="header__nav">
             <ul class="header__nav-list flex">
-                <li><a href="about.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
-                <li><a href="locations.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
-                <li><a href="contact.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
+                <li><a href="about.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Our
+                    Content</a></li>
+                <li><a href="locations.html"
+                       class="header__nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
+                <li><a href="contact.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Contact</a>
+                </li>
             </ul>
         </nav>
-        <div class="header__mobile-nav">
-            <button class="header__nav-open-btn grid grid-place-center"><img src="/images/shared/mobile/icon-hamburger.svg" alt=""></button>
-            <button class="header__nav-close-btn grid grid-place-center"><img src="/images/shared/mobile/icon-close.svg" alt=""></button>
-        </div>
+        <button class="header__mobile-nav-toggle"></button>
     </div>
 </header>
 
 <section class="location-section hero-section">
     <div class="location location--canada container grid">
-        <div class="location__text-content background-very-light-peach flow flex flex-column flex-justify-center">
+        <div class="location__text-content background-very-light-peach flow flex flex--column flex--justify-center">
             <h2 class="location__heading secondary-heading text-color-peach">Canada</h2>
             <div class="location__contact-wrapper grid">
                 <div class="location__address-wrapper">
@@ -62,7 +62,7 @@
 
     <div class="location location--australia container grid">
         <div class="location__image-wrapper"></div>
-        <div class="location__text-content background-very-light-peach flow flex flex-column flex-justify-center">
+        <div class="location__text-content background-very-light-peach flow flex flex--column flex--justify-center">
             <h2 class="location__heading secondary-heading text-color-peach">Australia</h2>
             <div class="location__contact-wrapper grid">
                 <div class="location__address-wrapper">
@@ -83,12 +83,12 @@
     </div>
 
     <div class="location location--uk container grid">
-        <div class="location__text-content background-very-light-peach flow flex flex-column flex-justify-center">
+        <div class="location__text-content background-very-light-peach flow flex flex--column flex--justify-center">
             <h2 class="location__heading secondary-heading text-color-peach">United Kingdom</h2>
             <div class="location__contact-wrapper grid">
                 <div class="location__address-wrapper">
                     <p class="location__address font-size-100 text-color-dark-grey text-bold">Designo UK Office</p>
-                    <p class="location__address font-size-100 text-color-dark-grey">13  Colorado Way</p>
+                    <p class="location__address font-size-100 text-color-dark-grey">13 Colorado Way</p>
                     <p class="location__address font-size-100 text-color-dark-grey">Rhyd-y-fro SA8 9GA</p>
                 </div>
 
@@ -118,7 +118,8 @@
                 </p>
             </div>
             <div class="footer-contact__button-wrapper grid">
-                <a href="contact.html" class="footer-contact__btn btn btn--light text-color-dark-grey text-decoration-none uppercase">
+                <a href="contact.html"
+                   class="footer-contact__btn btn btn--light text-color-dark-grey text-decoration-none uppercase">
                     Get in Touch
                 </a>
             </div>
@@ -126,18 +127,19 @@
     </section>
 
     <div class="container footer">
-        <div class="footer__logo-wrapper">
-            <a class="footer__logo-link flex flex-align-center flex-justify-center" href="../index.html">
-                <img src="/images/shared/desktop/logo-light.png" class="footer__logo" alt="Logo light">
-            </a>
-        </div>
+        <a class="footer__logo-wrapper flex flex--align-center flex--justify-center" href="../index.html">
+            <img src="/images/shared/desktop/logo-light.png" class="footer__logo" alt="Logo light">
+        </a>
         <nav class="footer__nav">
-            <ul class="footer__nav-list list-style-none flex flex-column flex-gap">
-                <li><a href="about.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
+            <ul class="footer__nav-list list-style-none flex flex--column flex--gap">
+                <li><a href="about.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
                     company</a></li>
-                <li><a href="locations.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                <li><a href="locations.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
                 </li>
-                <li><a href="contact.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                <li><a href="contact.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -153,18 +155,28 @@
             <a class="footer__contact-link footer-text-color text-decoration-none" href="contact@designo.co">M :
                 contact@designo.co</a>
         </div>
-        <div class="footer__social-logos-wrapper flex flex-gap">
-            <a class="footer__social-logo-link" href="https://www.facebook.com/"><ion-icon name="logo-facebook" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://www.youtube.com/"><ion-icon name="logo-youtube" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://twitter.com/"><ion-icon name="logo-twitter" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://in.pinterest.com/"><ion-icon name="logo-pinterest" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://www.instagram.com/"><ion-icon name="logo-instagram" class="footer__social-logo"></ion-icon></a>
+        <div class="footer__social-logos-wrapper flex flex--gap">
+            <a class="footer__social-logo-link" href="https://www.facebook.com/">
+                <ion-icon name="logo-facebook" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://www.youtube.com/">
+                <ion-icon name="logo-youtube" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://twitter.com/">
+                <ion-icon name="logo-twitter" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://in.pinterest.com/">
+                <ion-icon name="logo-pinterest" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://www.instagram.com/">
+                <ion-icon name="logo-instagram" class="footer__social-logo"></ion-icon>
+            </a>
         </div>
     </div>
 </footer>
 
 <div class="overlay hidden"></div>
-<script src="../javascript/script.js"></script>
+<script src="../js/script.js"></script>
 
 </body>
 </html>
