--- a/15-designo_multi_page_website/pages/web-design.html
+++ b/15-designo_multi_page_website/pages/web-design.html
@@ -4,121 +4,136 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/main.min.css">
 
-    <title>Frontend Mentor | Designo Agency Website Challenge</title>
+    <title>Designo | Web Design</title>
 </head>
 <body>
 
 <header class="header-section">
-    <div class="header container flex flex-justify-space-between flex-align-center">
+    <div class="header container flex flex--justify-space-between flex--align-center">
         <a href="../index.html" class="header__logo-wrapper">
             <img src="/images/shared/desktop/logo-dark.png" class="header__logo" alt="Designo logo">
         </a>
         <nav class="header__nav">
             <ul class="header__nav-list flex">
-                <li><a href="about.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
-                <li><a href="locations.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
-                <li><a href="contact.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
+                <li><a href="about.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Our
+                    Content</a></li>
+                <li><a href="locations.html"
+                       class="header__nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
+                <li><a href="contact.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Contact</a>
+                </li>
             </ul>
         </nav>
-        <div class="header__mobile-nav">
-            <button class="header__nav-open-btn grid grid-place-center"><img src="/images/shared/mobile/icon-hamburger.svg" alt=""></button>
-            <button class="header__nav-close-btn grid grid-place-center"><img src="/images/shared/mobile/icon-close.svg" alt=""></button>
-        </div>
+        <button class="header__mobile-nav-toggle"></button>
     </div>
 </header>
 
 <main>
     <section class="hero-section">
-        <div class="container hero-design grid grid-place-center background-peach text-align-center">
+        <div class="container hero-design grid grid--items-center background-peach text-align-center">
             <div class="hero-design__text-content flow">
                 <h1 class="hero-design__heading primary-heading text-color-white">Web design</h1>
-                <p class="hero__design__text font-size-100 text-color-white"> We build websites that serve as powerful marketing tools and bring
+                <p class="hero__design__text font-size-100 text-color-white"> We build websites that serve as powerful
+                    marketing tools and bring
                     memorable brand experiences.</p>
             </div>
         </div>
     </section>
 
-    <section class="projects-section section-padding">
+    <section class="cards-section section-padding">
         <div class="container grid grid--3-columns">
             <div class="card background-very-light-peach">
-                <div class="card__image-wrapper">
-                    <img src="/images/web-design/desktop/image-express.jpg" class="card__image" alt="Express website">
-                </div>
-                <div class="card__text-content text-align-center flow">
-                    <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
-                        Express
-                    </h3>
-                    <p class="card__text text-color-dark-grey font-size-100">
-                        A multi-carrier shipping website for ecommerce businesses
-                    </p>
-                </div>
+                <a class="card__link" href="#">
+                    <div class="card__image-wrapper">
+                        <img src="/images/web-design/desktop/image-express.jpg" class="card__image"
+                             alt="Express website">
+                    </div>
+                    <div class="card__text-content text-align-center flow">
+                        <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                            Express
+                        </h3>
+                        <p class="card__text text-color-dark-grey font-size-100">
+                            A multi-carrier shipping website for ecommerce businesses
+                        </p>
+                    </div>
+                </a>
             </div>
 
             <div class="card background-very-light-peach">
-                <div class="card__image-wrapper">
-                    <img src="/images/web-design/desktop/image-transfer.jpg" class="card__image" alt="Transfer website">
-                </div>
-                <div class="card__text-content text-align-center flow">
-                    <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
-                        Transfer
-                    </h3>
-                    <p class="card__text text-color-dark-grey font-size-100">
-                        Site for low-cost money transfers and sending money within seconds
-                    </p>
-                </div>
+                <a class="card__link" href="#">
+                    <div class="card__image-wrapper">
+                        <img src="/images/web-design/desktop/image-transfer.jpg" class="card__image"
+                             alt="Transfer website">
+                    </div>
+                    <div class="card__text-content text-align-center flow">
+                        <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                            Transfer
+                        </h3>
+                        <p class="card__text text-color-dark-grey font-size-100">
+                            Site for low-cost money transfers and sending money within seconds
+                        </p>
+                    </div>
+                </a>
             </div>
 
             <div class="card background-very-light-peach">
-                <div class="card__image-wrapper">
-                    <img src="/images/web-design/desktop/image-photon.jpg" class="card__image" alt="Photon website">
-                </div>
-                <div class="card__text-content text-align-center flow">
-                    <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
-                        Photon
-                    </h3>
-                    <p class="card__text text-color-dark-grey font-size-100">
-                        A state-of-the-art music player with high-resolution audio and DSP effects
-                    </p>
-                </div>
+                <a class="card__link" href="#">
+                    <div class="card__image-wrapper">
+                        <img src="/images/web-design/desktop/image-photon.jpg" class="card__image" alt="Photon website">
+                    </div>
+                    <div class="card__text-content text-align-center flow">
+                        <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                            Photon
+                        </h3>
+                        <p class="card__text text-color-dark-grey font-size-100">
+                            A state-of-the-art music player with high-resolution audio and DSP effects
+                        </p>
+                    </div>
+                </a>
             </div>
 
             <div class="card background-very-light-peach">
-                <div class="card__image-wrapper">
-                    <img src="/images/web-design/desktop/image-builder.jpg" class="card__image" alt="Builder website">
-                </div>
-                <div class="card__text-content text-align-center flow">
-                    <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
-                        Builder
-                    </h3>
-                    <p class="card__text text-color-dark-grey font-size-100">
-                        Connects users with local contractors based on their location
-                    </p>
-                </div>
+                <a class="card__link" href="#">
+                    <div class="card__image-wrapper">
+                        <img src="/images/web-design/desktop/image-builder.jpg" class="card__image"
+                             alt="Builder website">
+                    </div>
+                    <div class="card__text-content text-align-center flow">
+                        <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                            Builder
+                        </h3>
+                        <p class="card__text text-color-dark-grey font-size-100">
+                            Connects users with local contractors based on their location
+                        </p>
+                    </div>
+                </a>
             </div>
 
             <div class="card background-very-light-peach">
-                <div class="card__image-wrapper">
-                    <img src="/images/web-design/desktop/image-blogr.jpg" class="card__image" alt="Blogger website">
-                </div>
-                <div class="card__text-content text-align-center flow">
-                    <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
-                        Blogr
-                    </h3>
-                    <p class="card__text text-color-dark-grey font-size-100">
-                        Blogr is a platform for creating an online blog or publication
-                    </p>
-                </div>
+                <a class="card__link" href="https://www.frontendmentor.io/challenges/blogr-landing-page-EX2RLAApP">
+                    <div class="card__image-wrapper">
+                        <img src="/images/web-design/desktop/image-blogr.jpg" class="card__image" alt="Blogger website">
+                    </div>
+                    <div class="card__text-content text-align-center flow">
+                        <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                            Blogr
+                        </h3>
+                        <p class="card__text text-color-dark-grey font-size-100">
+                            Blogr is a platform for creating an online blog or publication
+                        </p>
+                    </div>
+                </a>
             </div>
 
             <div class="card background-very-light-peach">
+                <a class="card__link" href="#">
                 <div class="card__image-wrapper">
                     <img src="/images/web-design/desktop/image-camp.jpg" class="card__image" alt="Camp website">
                 </div>
@@ -130,30 +145,31 @@
                         Get expert training in coding, data, design, and digital marketing
                     </p>
                 </div>
+                </a>
             </div>
-
         </div>
     </section>
 
     <section class="services-section section-padding">
         <div class="container grid grid--2-columns">
-            <div class="service service--app-design flex flex-justify-center flex-align-center flex-column flex-gap">
-                <h2 class=" service__heading secondary-heading text-color-white uppercase letter-spacing-1">
+            <a href="app-design.html" class="service service--app grid grid--content-center grid-gap text-decoration-none">
+                <h2 class="service__heading secondary-heading text-color-white uppercase letter-spacing-1">
                     App Design
                 </h2>
-                <a class="service__link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
+                <p class="service__text font-size-100 text-color-white uppercase letter-spacing-2">
                     View Projects <span class="service__link-symbol">&#62;</span>
-                </a>
-            </div>
-            <div class="service service--graphic-design flex flex-justify-center flex-align-center flex-column flex-gap">
-                <h2 class=" service__heading secondary-heading text-color-white uppercase letter-spacing-1">
+                </p>
+            </a>
+
+
+            <a href="graphic-design.html" class="service service--graphic grid grid--content-center grid-gap text-decoration-none">
+                <h2 class="service__heading secondary-heading text-color-white uppercase letter-spacing-1">
                     Graphic Design
                 </h2>
-
-                <a class="service__link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
+                <p class="service__text font-size-100 text-color-white uppercase letter-spacing-2">
                     View Projects <span class="service__link-symbol">&#62;</span>
-                </a>
-            </div>
+                </p>
+            </a>
         </div>
     </section>
 </main>
@@ -171,7 +187,8 @@
                 </p>
             </div>
             <div class="footer-contact__button-wrapper grid">
-                <a href="contact.html" class="footer-contact__btn btn btn--light text-color-dark-grey text-decoration-none uppercase">
+                <a href="contact.html"
+                   class="footer-contact__btn btn btn--light text-color-dark-grey text-decoration-none uppercase">
                     Get in Touch
                 </a>
             </div>
@@ -179,18 +196,19 @@
     </section>
 
     <div class="container footer">
-        <div class="footer__logo-wrapper">
-            <a class="footer__logo-link flex flex-align-center flex-justify-center" href="../index.html">
-                <img src="/images/shared/desktop/logo-light.png" class="footer__logo" alt="Logo light">
-            </a>
-        </div>
+        <a class="footer__logo-wrapper flex flex--align-center flex--justify-center" href="../index.html">
+            <img src="/images/shared/desktop/logo-light.png" class="footer__logo" alt="Logo light">
+        </a>
         <nav class="footer__nav">
-            <ul class="footer__nav-list list-style-none flex flex-column flex-gap">
-                <li><a href="about.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
+            <ul class="footer__nav-list list-style-none flex flex--column flex--gap">
+                <li><a href="about.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
                     company</a></li>
-                <li><a href="locations.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                <li><a href="locations.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
                 </li>
-                <li><a href="contact.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                <li><a href="contact.html"
+                       class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -206,18 +224,28 @@
             <a class="footer__contact-link footer-text-color text-decoration-none" href="contact@designo.co">M :
                 contact@designo.co</a>
         </div>
-        <div class="footer__social-logos-wrapper flex flex-gap">
-            <a class="footer__social-logo-link" href="https://www.facebook.com/"><ion-icon name="logo-facebook" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://www.youtube.com/"><ion-icon name="logo-youtube" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://twitter.com/"><ion-icon name="logo-twitter" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://in.pinterest.com/"><ion-icon name="logo-pinterest" class="footer__social-logo"></ion-icon></a>
-            <a class="footer__social-logo-link" href="https://www.instagram.com/"><ion-icon name="logo-instagram" class="footer__social-logo"></ion-icon></a>
+        <div class="footer__social-logos-wrapper flex flex--gap">
+            <a class="footer__social-logo-link" href="https://www.facebook.com/">
+                <ion-icon name="logo-facebook" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://www.youtube.com/">
+                <ion-icon name="logo-youtube" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://twitter.com/">
+                <ion-icon name="logo-twitter" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://in.pinterest.com/">
+                <ion-icon name="logo-pinterest" class="footer__social-logo"></ion-icon>
+            </a>
+            <a class="footer__social-logo-link" href="https://www.instagram.com/">
+                <ion-icon name="logo-instagram" class="footer__social-logo"></ion-icon>
+            </a>
         </div>
     </div>
 </footer>
 
 <div class="overlay hidden"></div>
-<script src="../javascript/script.js"></script>
+<script src="../js/script.js"></script>
 
 </body>
 </html>
